Adds irssi script to set away status based on X server idle time

--- a/home/.irssi/config
+++ b/home/.irssi/config
@@ -333,6 +333,9 @@ settings = {
     pushover_sound = "pushover";
     pushover_debug = "no";
     pushover_ignorechannels = "&bitlbee";
+
+    autoaway_message = "I'm not at my keyboard right now.";
+    autoaway_timeout = "600";
   };
 };
 hilights = (
