Configures tmux to set $TERM to indicate support for 256 colors
This makes ncurses applications display colors correctly (assuming
a terminal emulator with support for 256 colors).  For example, mutt,
irssi, and mcabber.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -71,6 +71,8 @@ setw -g aggressive-resize on
 # Skips delay after command keys like <prefix> or <meta>
 set -g escape-time 0
 
+set -g default-terminal "screen-256color"
+
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
