--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -37,6 +37,22 @@ setw -g mode-keys vi
 
 ## Jesse's customizations
 
+# To key shortcuts unchanged with inverted number row, alternative
+# bindings for switching windows.
+bind ')' select-window -t :0
+bind '!' select-window -t :1
+bind '@' select-window -t :2
+bind '#' select-window -t :3
+bind '$' select-window -t :4
+bind '%' select-window -t :5
+bind '^' select-window -t :6
+bind '&' select-window -t :7
+bind '*' select-window -t :8
+bind '(' select-window -t :9
+
+# Jump to beginning of line, for use with inverted number row
+bind-key -t vi-copy ')' start-of-line
+
 # custom status bar
 set -g status-left ""
 set -g status-right "#S — #H"
