--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -57,13 +57,14 @@ bind-key -t vi-copy ')' start-of-line
 set -g status-left ""
 set -g status-right "#S — #H"
 
-# # more vi-style keys for copy-and-paste
-# unbind [
-# bind Escape copy-mode
-# unbind p
-# bind p paste-buffer
+# My prefix is C-b
+bind C-b send-prefix
+
+# More Vim-style bindings for copy-mode
+bind-key Escape copy-mode
 bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'y' copy-pipe "xclip -i -selection clipboard > /dev/null"
+bind-key -t vi-copy Escape cancel
 
 ##CLIPBOARD selection integration
 ##Requires prefix key before the command key
@@ -74,8 +75,6 @@ bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux past
 
 # shortcut for reloading configuration from this file
 bind-key r source-file ~/.tmux.conf
-
-bind-key C-b send-prefix
 
 # starts window numbering at 1 instead of 0
 set -g base-index 1
