--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -44,8 +44,9 @@ setw -g mode-keys vi
 
 ## Jesse's customizations
 
-# To key shortcuts unchanged with inverted number row, alternative
-# bindings for switching windows.
+# I wanted to continue to use the same shortcuts for changing windows in
+# tmux with the inverted number row.  So I created additional shortcuts
+# that mimic the behavior of the number-based shortcuts:
 bind ')' select-window -t :0
 bind '!' select-window -t :1
 bind '@' select-window -t :2
@@ -57,7 +58,9 @@ bind '&' select-window -t :7
 bind '*' select-window -t :8
 bind '(' select-window -t :9
 
-# Jump to beginning of line, for use with inverted number row
+# I use vi keys, and I often use 0 to jump to the beginning of a line in
+# copy mode.  With this extra shortcut I can continue to do so without
+# having to hold Shift.
 bind-key -t vi-copy ')' start-of-line
 
 # custom status bar
