In copy-mode in tmux, `y` yanks to primary selection instead of to clipboard
In Vim speak, it yanks to * instead of to +

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -73,7 +73,7 @@ bind C-b send-prefix
 # More Vim-style bindings for copy-mode
 bind-key Escape copy-mode
 bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-pipe "xclip -i -selection clipboard > /dev/null"
+bind-key -t vi-copy 'y' copy-pipe "xclip -i > /dev/null"
 bind-key -t vi-copy Escape cancel
 
 ##CLIPBOARD selection integration
