Adds shortcuts for opening vim or git log in a tmux split

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -14,6 +14,11 @@
 bind s split-window -v
 bind v split-window -h
 
+# open vim in a new split
+bind e split-window -h vim
+
+bind g split-window -h git lg
+
 # move around panes with hjkl, as one would in vim after pressing ctrl-w
 bind h select-pane -L
 bind j select-pane -D
