Changes tmux prefix to C-F12
This is in combination with a change to my xcape config, which causes
a tap on Alt_L to send C-F12.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -72,8 +72,9 @@ bind-key -t vi-copy ')' start-of-line
 set -g status-left ""
 set -g status-right "#S — #H"
 
-# My prefix is C-b
-bind C-b send-prefix
+unbind C-b
+set -g prefix C-F12
+bind C-F12 send-prefix
 
 # More Vim-style bindings for copy-mode
 bind-key Escape copy-mode
