Adds tmux shortcuts for common git operations

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -11,19 +11,17 @@
 
 # split windows like vim
 # vim's definition of a horizontal/vertical split is reversed from tmux's
-bind s split-window -v
-bind v split-window -h
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 
 # open vim in a new split
-bind e split-window -h vim
+bind e split-window -h -c "#{pane_current_path}" sensible-editor
 
-bind g split-window -h git lg
-
-# move around panes with hjkl, as one would in vim after pressing ctrl-w
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# shortcuts for common git operations
+bind g split-window -h -c "#{pane_current_path}" 'GIT_PAGER="less -+F" git lg'
+bind D split-window -h -c "#{pane_current_path}" 'GIT_PAGER="less -+F" git diff'
+bind C split-window -h -c "#{pane_current_path}" 'GIT_PAGER="less -+F" git diff --cached'
+bind A split-window -h -c "#{pane_current_path}" 'git add -p'
 
 # Smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
