New scrolling shortcuts for irssi, pane number change for tmux

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -92,6 +92,7 @@ bind-key r source-file ~/.tmux.conf
 
 # starts window numbering at 1 instead of 0
 set -g base-index 1
+set -g pane-base-index 1
 
 # overrides default behavior, which limits screen size to the size of
 # the smallest screen that is connected to a tmux session
