--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -71,8 +71,8 @@ set -g status-left ""
 set -g status-right "#S — #H"
 
 unbind C-b
-set -g prefix C-F12
-bind C-F12 send-prefix
+set -g prefix F12
+bind F12 send-prefix
 
 # More Vim-style bindings for copy-mode
 bind-key Escape copy-mode
