Removes bitlbee from installed packages

--- a/init.yml
+++ b/init.yml
@@ -12,10 +12,6 @@
         - apg
         - aptitude
 
-        # XMPP stuff
-        - bitlbee
-        - bitlbee-plugin-otr
-
         - build-essential
         - curl
         - git
@@ -44,6 +40,7 @@
     # Install Google Chrome
     - apt_key: id=7FAC5991
                url=https://dl-ssl.google.com/linux/linux_signing_key.pub
+      sudo: yes
     - apt_repository: repo='deb http://dl.google.com/linux/chrome/deb/ stable main'
       sudo: yes
     - apt: pkg=google-chrome-beta
