--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -19,6 +19,7 @@
 [core]
     pager = less -FR
     excludesfiles = .*.swo .*.swp
+	autocrlf = input
 [format]
     #pretty = tformat:"%Cblue%h...%Creset %Cgreen%an:%Creset %s (%ar)"
 [push]
