Changes shortcuts for switching workspaces

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,14 +1,3 @@
-# $Id: vim-keys.conf,v 1.2 2010-09-18 09:36:15 nicm Exp $
-#
-# vim-keys.conf, v1.2 2010/09/12
-#
-# By Daniel Thau.  Public domain.
-#
-# This configuration file binds many vi- and vim-like bindings to the
-# appropriate tmux key bindings.  Note that for many key bindings there is no
-# tmux analogue.  This is intended for tmux 1.3, which handles pane selection
-# differently from the previous versions
-
 # split windows like vim
 # vim's definition of a horizontal/vertical split is reversed from tmux's
 bind s split-window -v -c "#{pane_current_path}"
@@ -45,12 +34,15 @@ bind : command-prompt
 # vi-style controls for copy mode
 setw -g mode-keys vi
 
-## Jesse's customizations
-
-# I use vi keys, and I often use 0 to jump to the beginning of a line in
-# copy mode.  With this extra shortcut I can continue to do so without
-# having to hold Shift.
-bind-key -t vi-copy ')' start-of-line
+bind m select-window -t :1
+bind w select-window -t :2
+bind v select-window -t :3
+bind h select-window -t :4
+bind t select-window -t :5
+bind n select-window -t :6
+bind g select-window -t :7
+# bind c select-window -t :8
+# bind r select-window -t :9
 
 # custom status bar
 set -g status-left ""
