Changes tmux binding for command prompt to ,

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -27,9 +27,9 @@ bind > resize-pane -R 1
 bind - resize-pane -D 1
 bind + resize-pane -U 1
 
-# bind : to command-prompt like vim
-# this is the default in tmux already
-bind : command-prompt
+# bind , to command-prompt, like in my vim config
+bind , command-prompt
+bind : command-prompt -I '#W' "rename-window '%%'"
 
 # vi-style controls for copy mode
 setw -g mode-keys vi
