Changes tmux bindings for splitting windows

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,7 +1,7 @@
 # split windows like vim
 # vim's definition of a horizontal/vertical split is reversed from tmux's
-bind s split-window -v -c "#{pane_current_path}"
-bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -h -c "#{pane_current_path}"
+bind S split-window -v -c "#{pane_current_path}"
 
 # open vim in a new split
 bind e split-window -h -c "#{pane_current_path}" sensible-editor
