Tweaks tmux shortcuts

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -7,7 +7,7 @@ bind S split-window -v -c "#{pane_current_path}"
 bind e split-window -h -c "#{pane_current_path}" sensible-editor
 
 # shortcuts for common git operations
-bind g split-window -h -c "#{pane_current_path}" 'GIT_PAGER="less -+F" git lg'
+bind G split-window -h -c "#{pane_current_path}" 'GIT_PAGER="less -+F" git lg'
 bind D split-window -h -c "#{pane_current_path}" 'GIT_PAGER="less -+F" git diff'
 bind C split-window -h -c "#{pane_current_path}" 'GIT_PAGER="less -+F" git diff --cached'
 bind A split-window -h -c "#{pane_current_path}" 'git add -p'
@@ -57,6 +57,10 @@ bind-key Escape copy-mode
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-pipe "xclip -i > /dev/null"
 bind-key -t vi-copy Escape cancel
+
+# Shortcuts for getting into copy-mode
+bind PPage copy-mode -u
+bind NPage copy-mode
 
 ##CLIPBOARD selection integration
 ##Requires prefix key before the command key
