Instructs vimperator to ignore keys in gmail

--- a/home/.vimperatorrc
+++ b/home/.vimperatorrc
@@ -10,3 +10,4 @@ noremap k 3k
 ignorekeys add gabrielecirulli.github.io/2048/
 ignorekeys add feedly.com/*
 ignorekeys add sitr.us/talks/*
+ignorekeys add mail.google.com/*
