--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -85,6 +85,9 @@ set -g escape-time 0
 
 set -g default-terminal "screen-256color"
 
+# Keeps tmux session connected to ssh agent across login sessions
+set-environment -g SSH_AUTH_SOCK "$HOME/.ssh/ssh_auth_sock"
+
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
