Adds pdxmc to IRC channels

--- a/home/.irssi/config
+++ b/home/.irssi/config
@@ -115,6 +115,7 @@ chatnets = {
     autosendcmd = "/msg &bitlbee identify Byactyac1";
   };
   zinc = { type = "IRC"; };
+  pdxmc = { type = "IRC"; };
 };
 
 channels = (
