--- a/home/.tmuxinator/comms.yml
+++ b/home/.tmuxinator/comms.yml
@@ -7,10 +7,10 @@ root: ~/
 # socket_name: foo
 
 # Run arbitrary `pass` command to make sure passphrase is cached.
-pre: pass grep 'does not match anything'
+pre: pass grep 'does not match anything'; tmux set-option -g allow-rename off
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-# pre_window: rbenv shell 2.0.0-p247
+#pre_window: tmux set-option allow-rename off
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
@@ -19,7 +19,7 @@ pre: pass grep 'does not match anything'
 # tmux_command: byobu
 
 windows:
-  - mail/galois:   mutt -F ~/.mutt/logins/galois
+  - mail/galois:   alot -n ~/.notmuch-galois
   - mail/sitrus:   alot
   - jabber/galois: jabber jesse@galois.com
   - jabber/sitrus: jabber jesse@sitr.us
