Updates init.yml to check for sudo privilege

--- a/init.yml
+++ b/init.yml
@@ -7,6 +7,7 @@
     - name: install apt packages
       action: apt pkg={{ item }} state=present
       sudo: yes
+      when: no_sudo is not defined
       with_items:
         - ack-grep
         - apg
@@ -52,10 +53,13 @@
     - apt_key: id=7FAC5991
                url=https://dl-ssl.google.com/linux/linux_signing_key.pub
       sudo: yes
+      when: no_sudo is not defined
     - apt_repository: repo='deb http://dl.google.com/linux/chrome/deb/ stable main'
       sudo: yes
+      when: no_sudo is not defined
     - apt: pkg=google-chrome-beta
       sudo: yes
+      when: no_sudo is not defined
 
     - name: cabal update
       shell: cabal update
