Open new tmux windows with same working directory as previously active pane

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -44,6 +44,8 @@ bind g select-window -t :7
 # bind c select-window -t :8
 # bind r select-window -t :9
 
+bind c new-window -c "#{pane_current_path}"
+
 # custom status bar
 set -g status-left ""
 set -g status-right "#S — #H"
