--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -130,3 +130,10 @@ set-option -g bell-action any
 # If on, ring the terminal bell when an activity, content or silence alert
 # occurs.
 set-option -g bell-on-alert on
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'Morantron/tmux-fingers'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
