--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,26 +1,29 @@
 [color]
-    branch = auto
-    diff = auto
-    status = auto
-    ui = auto
+	branch = auto
+	diff = auto
+	status = auto
+	ui = auto
 [user]
-    name = Jesse Hallett
-    signingkey = A5CC2BE3
-    useConfigOnly = true
+	name = Jesse Hallett
+	signingkey = A5CC2BE3
+	useConfigOnly = true
 [alias]
-    st  = status
-    up  = !git stash && git fetch && git rebase origin/master && git stash pop
-    di  = diff --cached
-    fix = !vim $(git-ls-files --unmerged | cut -f2 | uniq)
-    pend = log origin/master..HEAD
-    lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-[url "git@github.com"]
-    insteadOf = gh
+	st  = status
+	up  = !git stash && git fetch && git rebase origin/master && git stash pop
+	di  = diff --cached
+	fix = !vim $(git-ls-files --unmerged | cut -f2 | uniq)
+	pend = log origin/master..HEAD
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+	it = !git init && read -p 'Committer email address for this repo: ' email && git config user.email $email && git commit -m 'initial commit' --allow-empty
+	commend = commit --amend --no-edit
 [core]
-    pager = less -FR
-    excludesfiles = .*.swo .*.swp
-    autocrlf = input
+	pager = less -FR
+	excludesfiles = .*.swo .*.swp
+	autocrlf = input
 [format]
-    #pretty = tformat:"%Cblue%h...%Creset %Cgreen%an:%Creset %s (%ar)"
+	#pretty = tformat:"%Cblue%h...%Creset %Cgreen%an:%Creset %s (%ar)"
 [push]
-    default = matching
+	default = simple
+[rerere]
+	enabled = true
+	autoupdate = true
