tmux config updates for v2.4; get tpm from debian; install some tmux plugins

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -55,10 +55,10 @@ set -g prefix F12
 bind F12 send-prefix
 
 # More Vim-style bindings for copy-mode
+unbind-key -T copy-mode-vi v
 bind-key Escape copy-mode
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-pipe "xclip -i > /dev/null"
-bind-key -t vi-copy Escape cancel
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi Escape send-keys -X cancel
 
 # Shortcuts for getting into copy-mode
 bind PPage copy-mode -u
@@ -67,9 +67,9 @@ bind NPage copy-mode
 ##CLIPBOARD selection integration
 ##Requires prefix key before the command key
 #Copy tmux paste buffer to CLIPBOARD
-bind C-c run "tmux show-buffer | xclip -i -selection clipboard > /dev/null"
+bind C-c run "tmux show-buffer | xsel --input --clipboard > /dev/null"
 #Copy CLIPBOARD to tmux paste buffer, paste tmux paste buffer, pop selection off of the buffer stack
-bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer; tmux delete-buffer"
+bind C-v run "tmux set-buffer -- \"$(xsel --output --clipboard)\"; tmux paste-buffer; tmux delete-buffer"
 
 # shortcut for reloading configuration from this file
 bind-key r source-file ~/.tmux.conf
@@ -132,8 +132,9 @@ set-option -g bell-action any
 set-option -g bell-on-alert on
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'Morantron/tmux-fingers'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '/usr/share/tmux-plugin-manager/tpm'
