Hook up custom vim-tmux integration

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -19,6 +19,11 @@ bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)n?vim(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)n?vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
+# Zoom other pane in the current window
+# bind F4 resize-pane -Z -t!
+bind -n F4 run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)n?vim(diff)?$' && tmux send-keys F4) || tmux resize-pane -Z -t!"
+# bind -n F4 run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)n?vim(diff)?$' && tmux send-keys F4) || (tmux list-panes -F '#D #{pane_current_command}' | grep -iE '\bn?vim(diff)?$' | cut -d' ' -f1 | head -n1 | xargs -r tmux resize-pane -Z -t)"
+
 # resize panes like vim
 # feel free to change the "1" to however many lines you want to resize by, only
 # one at a time can be slow
