--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -90,7 +90,7 @@ setw -g aggressive-resize on
 # Skips delay after command keys like <prefix> or <meta>
 set -g escape-time 0
 
-set -g default-terminal "tmux-256color"
+set -g default-terminal "konsole-256color"
 
 # Keeps tmux session connected to ssh agent across login sessions
 set-environment -g SSH_AUTH_SOCK "$HOME/.ssh/ssh_auth_sock"
