Enable "visual bell" in tmux

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -132,6 +132,8 @@ set-window-option -g clock-mode-colour green #green
 # all bells are ignored and current means only bell in windows other than
 # the current window are ignored.
 set-option -g bell-action any
+set-option -g visual-activity on
+set-option -g visual-bell on
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-yank'
