Configure tmux to allow windows to be renamed dynamically

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -83,6 +83,9 @@ bind-key r source-file ~/.tmux.conf
 set -g base-index 1
 set -g pane-base-index 1
 
+# Allow shell to dynamically update window titles
+set -g allow-rename on
+
 # overrides default behavior, which limits screen size to the size of
 # the smallest screen that is connected to a tmux session
 setw -g aggressive-resize on
