Change the way the title of the terminal window containing a tmux session is displayed

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -83,8 +83,10 @@ bind-key r source-file ~/.tmux.conf
 set -g base-index 1
 set -g pane-base-index 1
 
-# Allow shell to dynamically update window titles
-set -g allow-rename on
+set -g allow-rename on # Allow shell to dynamically update window name
+set -g automatic-rename on # Update window name based on what shell specifies
+set -g set-titles on
+set -g set-titles-string "#S — #{window_name} #{?session_alerts, !! #{session_alerts},}"
 
 # overrides default behavior, which limits screen size to the size of
 # the smallest screen that is connected to a tmux session
