Install tmux-picker plugin; remove unused plugins

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -142,8 +142,10 @@ set-option -g visual-bell on
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'Morantron/tmux-fingers'
+set -g @plugin 'RTBHOUSE/tmux-picker'
+
+# # Customize key binding for tmux-picker
+setenv -g PICKER_KEY 'F'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '/usr/share/tmux-plugin-manager/tpm'
