--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -10,13 +10,13 @@
 	email = jesse@sitr.us
 [alias]
 	st  = status
-	up  = !git stash && git fetch && git rebase origin/master && git stash pop
 	di  = diff --cached
 	fix = !vim $(git-ls-files --unmerged | cut -f2 | uniq)
 	pend = log origin/master..HEAD
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 	it = !git init && read -p 'Committer email address for this repo: ' email && git config user.email $email && git commit -m 'initial commit' --allow-empty
 	commend = commit --amend --no-edit
+	up = git fetch origin master:master
 [core]
 	pager = less -FR
 	excludesfiles = .*.swo .*.swp
@@ -28,3 +28,10 @@
 [rerere]
 	enabled = true
 	autoupdate = true
+[rebase]
+	autosquash = true
+[diff]
+	tool = vimdiff
+[difftool]
+	prompt = false
+	trustExitCode = true
