--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -56,8 +56,8 @@ set -g status-left ""
 set -g status-right "#S — #H"
 
 unbind C-b
-set -g prefix F12
-bind F12 send-prefix
+set -g prefix C-b
+bind C-b send-prefix
 
 # More Vim-style bindings for copy-mode
 unbind-key -T copy-mode-vi v
