--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,7 +1,5 @@
-# split windows like vim
-# vim's definition of a horizontal/vertical split is reversed from tmux's
-bind s split-window -h -c "#{pane_current_path}"
-bind S split-window -v -c "#{pane_current_path}"
+bind-key -T prefix s choose-tree -s
+bind-key -T prefix p choose-tree
 
 # open vim in a new split
 bind e split-window -h -c "#{pane_current_path}" sensible-editor
