use path from previous pane when opening tmux splits

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,6 +1,9 @@
 bind-key -T prefix s choose-tree -s
 bind-key -T prefix p choose-tree
 
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
+
 # open vim in a new split
 bind e split-window -h -c "#{pane_current_path}" sensible-editor
 
